--- a/AutoMobileShowRoom/AutoMobileServices.Test/AutoMobileServices.Test.csproj
+++ b/AutoMobileShowRoom/AutoMobileServices.Test/AutoMobileServices.Test.csproj
@@ -48,11 +48,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="AutoMobile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutoMobile\AutoMobile.csproj">
+      <Project>{a14f36a9-ee1f-4c7d-9d0a-65d20db12653}</Project>
+      <Name>AutoMobile</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
